--- a/pages/16156.html
+++ b/pages/16156.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8553/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -320,7 +319,9 @@ margin-left: 0em;
 
 <h3 id='dwyerkan_model_structure'>Dwyer-Kan model structure</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the <a class='existingWikiWord' href='/nlab/show/equivalence+of+dg-categories'>Dwyer-Kan equivalences of dg-categories</a>. The fibrant objects are the locally fibrant dg-categories, i.e. for which all <a class='existingWikiWord' href='/nlab/show/mapping+complex'>mapping complexes</a> are <a class='existingWikiWord' href='/nlab/show/fibrant+object'>fibrant objects</a> in the category of <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the <a class='existingWikiWord' href='/nlab/show/equivalence+of+dg-categories'>Dwyer-Kan equivalences of dg-categories</a>. The fibrations are the dg-functors that are surjective on all Hom complexes and <a class='existingWikiWord' href='/nlab/show/isofibration'>isofibrations</a> at the level of homotopy categories. The fibrant objects are the locally fibrant dg-categories, i.e. for which all <a class='existingWikiWord' href='/nlab/show/mapping+complex'>mapping complexes</a> are <a class='existingWikiWord' href='/nlab/show/fibrant+object'>fibrant objects</a> in the category of <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a>.</p>
+
+<p>This model structure is cofibrantly generated, see https://arxiv.org/abs/math/0407338.</p>
 
 <h3 id='quasiequiconic_model_structure'>Quasi-equiconic model structure</h3>
 
@@ -328,8 +329,8 @@ margin-left: 0em;
 
 <h3 id='morita_model_structure'>Morita model structure</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the Morita equivalences, i.e. functors <math class='maruku-mathml' display='inline' id='mathml_59465e243afb8cbf3a60008c149cecc1716f880e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>u</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>u : A \to B</annotation></semantics></math> inducing <a class='existingWikiWord' href='/nlab/show/equivalence+of+dg-categories'>equivalences</a> of <a class='existingWikiWord' href='/nlab/show/derived+dg-category+of+a+dg-category'>derived dg-categories</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_59465e243afb8cbf3a60008c149cecc1716f880e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>B</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>D</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> D(B) \to D(A). </annotation></semantics></math></div>
+<p>The <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the Morita equivalences, i.e. functors <math class='maruku-mathml' display='inline' id='mathml_d055eae3775328688a99c7f27bef559cf0a37b62_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>u</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>u : A \to B</annotation></semantics></math> inducing <a class='existingWikiWord' href='/nlab/show/equivalence+of+dg-categories'>equivalences</a> of <a class='existingWikiWord' href='/nlab/show/derived+dg-category+of+a+dg-category'>derived dg-categories</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d055eae3775328688a99c7f27bef559cf0a37b62_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>B</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>D</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> D(B) \to D(A). </annotation></semantics></math></div>
 <p>The <a class='existingWikiWord' href='/nlab/show/fibrant+object'>fibrant objects</a> are the <span class='newWikiWord'>idempotent complete<a href='/nlab/new/idempotent+complete+dg-category'>?</a></span> <a class='existingWikiWord' href='/nlab/show/pretriangulated+dg-category'>pretriangulated dg-categories</a>.</p>
 
 <h2 id='references'>References</h2>
@@ -352,19 +353,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  6, 2015 16:22:39 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Khan</a>
-  (2.243.174.221)
+  <p>
+  Last revised on May 21, 2018 at 07:02:47.
+  See the <a href="https://ncatlab.org/nlab/history/model structures on dg-categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structures+on+dg-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structures+on+dg-categories/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/model+structures+on+dg-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structures+on+dg-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/model+structures+on+dg-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structures+on+dg-categories/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/model+structures+on+dg-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structures+on+dg-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/model structures on dg-categories/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/model+structures+on+dg-categories" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/model+structures+on+dg-categories" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/model+structures+on+dg-categories" id="view_source" rel="nofollow">Source</a>
