--- a/pages/9309.html
+++ b/pages/9309.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8556/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -309,7 +308,7 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a><ul><li><a href='#nonabelian_case'>Non-abelian case</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a> <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> of <a class='existingWikiWord' href='/nlab/show/D-brane'>D-branes</a></p>
@@ -317,12 +316,6 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <p>Named after <a class='existingWikiWord' href='/nlab/show/Paul+Dirac'>Paul Dirac</a>, <a class='existingWikiWord' href='/nlab/show/Max+Born'>Max Born</a> and <a class='existingWikiWord' href='/nlab/show/Leopold+Infeld'>Leopold Infeld</a>.</p>
-
-<p>For non-abelian <a class='existingWikiWord' href='/nlab/show/Chan-Paton+bundle'>Chan-Paton gauge field</a>:</p>
-
-<ul>
-<li id='Tseytlin97'><a class='existingWikiWord' href='/nlab/show/Arkady+Tseytlin'>Arkady Tseytlin</a>, <em>On nonAbelian generalization of Born-Infeld action in string theory</em>, Nucl.Phys. B501 (1997) 41-52 (<a href='http://inspirehep.net/record/439767/'>spire</a>)</li>
-</ul>
 
 <p>Discussion in terms of D-branes as leaves of <a class='existingWikiWord' href='/nlab/show/Dirac+manifold'>Dirac structures</a> on <a class='existingWikiWord' href='/nlab/show/Courant+algebroid'>Courant Lie 2-algebroids</a> of <a class='existingWikiWord' href='/nlab/show/type+II+geometry'>type II geometry</a> is in</p>
 
@@ -336,6 +329,22 @@ margin-left: 0em;
 <li id='Nieto01'>J. A. Nieto, <em>Remarks on Weyl invariant p-branes and Dp-branes</em> (<a href='http://arxiv.org/abs/hep-th/0110227'>arXiv:hep-th/0110227</a>)</li>
 </ul>
 
+<h3 id='nonabelian_case'>Non-abelian case</h3>
+
+<p>Discussion of the generalization of the DBI action to <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>non-abelian</a> <a class='existingWikiWord' href='/nlab/show/Chan-Paton+bundle'>Chan-Paton gauge fields</a> (supposedly: for coincident <a class='existingWikiWord' href='/nlab/show/D-brane'>D-branes</a>) includes the following:</p>
+
+<p>A proposal for the formulation appears in</p>
+
+<ul>
+<li id='Tseytlin97'><a class='existingWikiWord' href='/nlab/show/Arkady+Tseytlin'>Arkady Tseytlin</a>, <em>On non-Abelian generalization of Born-Infeld action in string theory</em>, Nucl.Phys. B501 (1997) 41-52 (<a href='http://inspirehep.net/record/439767/'>spire</a>)</li>
+</ul>
+
+<p>A critical discussion is in</p>
+
+<ul>
+<li id='Schwarz01'><a class='existingWikiWord' href='/nlab/show/John+Schwarz'>John Schwarz</a>, section 2 of <em>Comments on Born-Infeld Theory</em>, talk presented at Strings 2001 (<a href='https://arxiv.org/abs/hep-th/0103165'>arXiv:hep-th/0103165</a>)</li>
+</ul>
+
 <p>
 </p>
 
@@ -345,19 +354,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 13, 2017 09:46:49 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  <p>
+  Last revised on May 23, 2018 at 07:35:27.
+  See the <a href="https://ncatlab.org/nlab/history/Dirac-Born-Infeld action" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac-Born-Infeld+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac-Born-Infeld+action/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Dirac-Born-Infeld+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac-Born-Infeld+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Dirac-Born-Infeld+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac-Born-Infeld+action/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Dirac-Born-Infeld+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac-Born-Infeld+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Dirac-Born-Infeld action/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Dirac-Born-Infeld+action" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Dirac-Born-Infeld+action" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Dirac-Born-Infeld+action" id="view_source" rel="nofollow">Source</a>
