--- a/pages/10911.html
+++ b/pages/10911.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5557/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -513,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -582,11 +581,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <a class='existingWikiWord' href='/nlab/show/D%3D10+super+Yang-Mills+theory'>D=10 super Yang-Mills theory</a> all the way to the point yields a <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> whose <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> are simply elements of the gauge <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_478d9bf30af67f20d245218d4c005934a49e33cf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math>, hence <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> for a <a class='existingWikiWord' href='/nlab/show/matrix+Lie+algebra'>matrix Lie algebra</a>. This <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>physics</a> is called the <em>IKKT matrix model</em>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <a class='existingWikiWord' href='/nlab/show/D%3D10+super+Yang-Mills+theory'>D=10 super Yang-Mills theory</a> all the way to the point yields a <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> whose <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> are simply elements of the gauge <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_5156a8a27f3459424ef8f801676ddd25b387b05a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math>, hence <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> for a <a class='existingWikiWord' href='/nlab/show/matrix+Lie+algebra'>matrix Lie algebra</a>. This <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>physics</a> is called the <em>IKKT matrix model</em>.</p>
 
 <p>Alternatively this model can be motivated from a certain regularization of the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldsheet</a> <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> of the <a class='existingWikiWord' href='/nlab/show/superstring'>superstring</a>. This is how it was originally obtained in (<a href='#IKKT96'>IKKT 96</a>).</p>
 
-<p>It has been argued that for <math class='maruku-mathml' display='inline' id='mathml_478d9bf30af67f20d245218d4c005934a49e33cf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>=</mo><mi>𝔰𝔲</mi><mo stretchy='false'>(</mo><mi>N</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{g} = \mathfrak{su}(N)</annotation></semantics></math> for large <math class='maruku-mathml' display='inline' id='mathml_478d9bf30af67f20d245218d4c005934a49e33cf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math>, this model captures aspects of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative</a> <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIB string theory</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></em>). Therefore this is also called the <em>IIB matrix model</em> (in contast to the <a class='existingWikiWord' href='/nlab/show/BFSS+matrix+model'>BFSS matrix model</a> in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a>).</p>
+<p>It has been argued that for <math class='maruku-mathml' display='inline' id='mathml_5156a8a27f3459424ef8f801676ddd25b387b05a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>=</mo><mi>𝔰𝔲</mi><mo stretchy='false'>(</mo><mi>N</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{g} = \mathfrak{su}(N)</annotation></semantics></math> for large <math class='maruku-mathml' display='inline' id='mathml_5156a8a27f3459424ef8f801676ddd25b387b05a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math>, this model captures aspects of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative</a> <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIB string theory</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></em>). Therefore this is also called the <em>IIB matrix model</em> (in contast to the <a class='existingWikiWord' href='/nlab/show/BFSS+matrix+model'>BFSS matrix model</a> in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a>).</p>
 
 <p>Several authors have explored the possibility to lift the derivation of the IKKT model from the <a class='existingWikiWord' href='/nlab/show/superstring'>superstring</a> to the <a class='existingWikiWord' href='/nlab/show/M2-brane'>M2-brane</a>. See at <em><a class='existingWikiWord' href='/nlab/show/membrane+matrix+model'>membrane matrix model</a></em> for more on this.</p>
 
@@ -616,6 +615,12 @@ margin-left: 0em;
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Mikhail+Movshev'>Mikhail Movshev</a>, <a class='existingWikiWord' href='/nlab/show/Albert+Schwarz'>Albert Schwarz</a>, <em>On maximally supersymmetric Yang-Mills theories</em>, Nucl.Phys. B681 (2004) 324-350 (<a href='https://arxiv.org/abs/hep-th/0311132'>arXiv:hep-th/0311132</a>)</li>
+</ul>
+
+<p>Derivation from <a class='existingWikiWord' href='/nlab/show/string+field+theory'>open string field theory</a> is discussed in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Taejin+Lee'>Taejin Lee</a>, <em>Covariant Open String Field Theory on Multiple D<math class='maruku-mathml' display='inline' id='mathml_5156a8a27f3459424ef8f801676ddd25b387b05a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-Branes</em> (<a href='https://arxiv.org/abs/1703.06402'>arXiv:1703.06402</a>)</li>
 </ul>
 
 <p>Arguments that full <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> generalized to <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>noncommutative geometry</a> is recovered as the <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a> around classical solutions of the IKKT model are in</p>
@@ -678,19 +683,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2016 03:16:23 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.15.236.235)
+  <p>
+  Last revised on May 23, 2018 at 12:24:01.
+  See the <a href="https://ncatlab.org/nlab/history/IKKT matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/IKKT+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/IKKT+matrix+model/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/IKKT+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/IKKT+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/IKKT+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/IKKT+matrix+model/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/IKKT+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/IKKT+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/IKKT matrix model/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/IKKT+matrix+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/IKKT+matrix+model" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/IKKT+matrix+model" id="view_source" rel="nofollow">Source</a>
