--- a/pages/1788.html
+++ b/pages/1788.html
@@ -310,18 +310,20 @@ margin-left: 0em;
 <p><span class='newWikiWord'>AAA.pdf<a href='/nlab/files/AAA.pdf'>?</a></span></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/initial+%CE%98-data'>Initial Θ-data</a></p>
+
+<p><span class='newWikiWord'>Finite Potent Endomorphism<a href='/nlab/new/Finite+Potent+Endomorphism'>?</a></span></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on May  9, 2018 at 10:53:34.
+  Last revised on May 24, 2018 at 08:01:08.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1503" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1503 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1504" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1504 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
