--- a/pages/15970.html
+++ b/pages/15970.html
@@ -315,27 +315,25 @@ margin-left: 0em;
 
 <p>I’m a physicist interested in clear and encompassing foundations. You can find my contact <em><a href='axiomsofchoice.org'>on my Wiki</a></em>. I also create video content on type systems and category theoretical concepts <em><a href='https://www.youtube.com/channel/UCcrSMnEYhIPX_p127jI23qw/videos'>on youtube</a></em>.</p>
 
-<p><img alt='Me in 2014' src='http://i.imgur.com/mBK4dTV.jpg'/></p>
-
-<p><img src='http://www.ncatlab.org/nlab/files/BraidDiagramForHomologyOnTripled.jpg' width='500'/></p>
-
-<p><img alt='Me in 2018' src='https://i.imgur.com/hcXFEOC.png'/></p>
-
+<p><img alt='2014' src='http://i.imgur.com/mBK4dTV.jpg'/></p>
+<center><img src='http://www.ncatlab.org/nlab/files/BraidDiagramForHomologyOnTripled.jpg' width='500'/></center>
 <div class='query'>
 <p><a class='existingWikiWord' href='/nlab/show/Nikolaj+Kuntner'>Nikolaj Kuntner</a>: how to do a query text</p>
 </div>
+
+<p><img alt='2018' src='https://i.imgur.com/hcXFEOC.png'/></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on May 25, 2018 at 17:16:07.
+  Last revised on May 27, 2018 at 04:51:45.
   See the <a href="https://ncatlab.org/nlab/history/Nikolaj Kuntner" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nikolaj+Kuntner" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nikolaj+Kuntner/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Nikolaj+Kuntner" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nikolaj+Kuntner" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Nikolaj+Kuntner" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nikolaj+Kuntner/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Nikolaj+Kuntner" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nikolaj+Kuntner" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Nikolaj Kuntner/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
