--- a/pages/5758.html
+++ b/pages/5758.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2549/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -477,7 +476,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
+<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
 
 <ul>
 <li>
@@ -503,7 +502,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Cisinski+model+structure'>Cisinski model structure</a></li>
 </ul>
 
-<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+for+infinity-groupoids'>for ∞-groupoids</a></p>
 
@@ -555,7 +554,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
 
 <ul>
 <li>
@@ -567,7 +566,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
+<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
 
 <ul>
 <li>
@@ -579,7 +578,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
+<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
 
 <h4 id='general'>general</h4>
 
@@ -641,7 +640,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -665,13 +664,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-categories'>on dg-categories</a></li>
 </ul>
 
-<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
+<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
 
 <ul>
 <li>
@@ -685,7 +684,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -709,7 +708,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
+<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
 
 <ul>
 <li>
@@ -1045,16 +1044,16 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#Properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#for_dgalgebras'>For dg-algebras</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#Definitions'>Definitions</a></li><li><a href='#Properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#for_dgalgebras'>For dg-algebras</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The category of <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> over a <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebra</a>, or more generally a <a class='existingWikiWord' href='/nlab/show/dg-category'>dg-category</a>, admits <a class='existingWikiWord' href='/nlab/show/dg-model+category'>dg-model structures</a> which present the <a class='existingWikiWord' href='/nlab/show/derived+dg-category+of+a+dg-category'>derived dg-category</a>.</p>
 
-<p>In the case of <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebras</a> in an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> are the same as <a class='existingWikiWord' href='/nlab/show/module+over+an+algebra+over+an+operad'>modules</a> over <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras</a> over the <a class='existingWikiWord' href='/nlab/show/associative+operad'>associative operad</a> in <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ch</mi><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ch(\mathcal{A})</annotation></semantics></math>. These admit model structures as described in <a class='existingWikiWord' href='/nlab/show/model+structure+on+modules+over+an+algebra+over+an+operad'>model structure on modules over an algebra over an operad</a>, <a class='existingWikiWord' href='/nlab/show/transferred+model+structure'>transferred</a> from the <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structures on chain complexes</a> in <math class='maruku-mathml' display='inline' id='mathml_9ea1947db3f9902102c912c7fdbb5c31d28eaa05_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>.</p>
+<p>In the case of <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebras</a> in an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> are the same as <a class='existingWikiWord' href='/nlab/show/module+over+an+algebra+over+an+operad'>modules</a> over <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras</a> over the <a class='existingWikiWord' href='/nlab/show/associative+operad'>associative operad</a> in <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ch</mi><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ch(\mathcal{A})</annotation></semantics></math>. These admit model structures as described in <a class='existingWikiWord' href='/nlab/show/model+structure+on+modules+over+an+algebra+over+an+operad'>model structure on modules over an algebra over an operad</a>, <a class='existingWikiWord' href='/nlab/show/transferred+model+structure'>transferred</a> from the <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structures on chain complexes</a> in <math class='maruku-mathml' display='inline' id='mathml_deb5a6938b9d024a654c2538f159876fd0aa7bf3_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>.</p>
 
 <p>More generally there are <a class='existingWikiWord' href='/nlab/show/model+category'>model structures</a> on <a class='existingWikiWord' href='/nlab/show/dg-module'>dg-modules</a> over a <a class='existingWikiWord' href='/nlab/show/dg-category'>dg-category</a>, analogous to <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structures on simplicial presheaves</a>.</p>
 
-<h2 id='definition'>Definition</h2>
+<h2 id='Definitions'>Definitions</h2>
 
 <div class='num_theorem' id='ProjectiveModelStructure'>
 <h6 id='theorem'>Theorem</h6>
@@ -1127,7 +1126,7 @@ margin-left: 0em;
 <p>Paragraph 3.2 of</p>
 
 <ul>
-<li id='Keller2006'><a class='existingWikiWord' href='/nlab/show/Bernhard+Keller'>Bernhard Keller</a>, <em>On differential graded categories</em>, <a href='http://arxiv.org/abs/math/0601185'>arXiv:math/0601185</a>.</li>
+<li id='Keller06'><a class='existingWikiWord' href='/nlab/show/Bernhard+Keller'>Bernhard Keller</a>, <em>On differential graded categories</em>, <a href='http://arxiv.org/abs/math/0601185'>arXiv:math/0601185</a>.</li>
 </ul>
 
 <h3 id='for_dgalgebras'>For dg-algebras</h3>
@@ -1177,19 +1176,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 30, 2018 03:41:20 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.90.187)
+  <p>
+  Last revised on May 27, 2018 at 15:56:59.
+  See the <a href="https://ncatlab.org/nlab/history/model structure on dg-modules" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+on+dg-modules" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+on+dg-modules/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/model+structure+on+dg-modules" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+on+dg-modules" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/model+structure+on+dg-modules" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+on+dg-modules/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/model+structure+on+dg-modules" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+on+dg-modules" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/model structure on dg-modules/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/model+structure+on+dg-modules" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/model+structure+on+dg-modules" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/model+structure+on+dg-modules" id="view_source" rel="nofollow">Source</a>
