--- a/pages/4763.html
+++ b/pages/4763.html
@@ -329,7 +329,13 @@ margin-left: 0em;
 <li>Joseph Chuang, Andrey Lazarev, <em>Dual Feynman transform for modular operads</em>, <a href='http://arxiv.org/abs/0704.2561'>arxiv/0704.2561</a></li>
 
 <li>Martin Markl, Steve Shnider, Jim Stasheff, <em>Operads in algebra, topology and physics</em>, Mathematical Surveys and Monographs <strong>96</strong>, Amer. Math. Soc. 2002. x+349 pp. <a href='http://www.ams.org/mathscinet-getitem?mr=2003f:18011'>MR2003f:18011</a>(for Feynman transform see page 251)</li>
+
+<li>Michael Slawinski, <em>The quantum <math class='maruku-mathml' display='inline' id='mathml_d26d432c92e53b4188e91e01250a690e6bf7b6db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>A_\infty</annotation></semantics></math>-relations on the elliptic curve</em>, <a href='https://arxiv.org/abs/1711.07940'>arxiv/1711.07940</a></li>
 </ul>
+
+<blockquote>
+<p>We define and prove the existence of the Quantum <math class='maruku-mathml' display='inline' id='mathml_d26d432c92e53b4188e91e01250a690e6bf7b6db_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>A_\infty</annotation></semantics></math>-relations on the Fukaya category of the elliptic curve, using the notion of the Feynman transform of a modular operad, as defined by Getzler and Kapranov. Following Barannikov, these relations may be viewed as defining a solution to the quantum master equation of Batalin-Vilkovisky geometry.</p>
+</blockquote>
 
 <p>
  
@@ -338,14 +344,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 27, 2018 at 18:07:43.
+  Last revised on May 28, 2018 at 05:32:37.
   See the <a href="https://ncatlab.org/nlab/history/Feynman transform" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Feynman+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Feynman+transform/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Feynman+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Feynman+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Feynman+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Feynman+transform/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Feynman+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Feynman+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Feynman transform/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
