--- a/pages/17036.html
+++ b/pages/17036.html
@@ -294,6 +294,7 @@ margin-left: 0em;
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Alexander%20Schmeding" title="Overview of nLab pages which Alexander Schmeding has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,11 +310,23 @@ margin-left: 0em;
 <div id="revision">
     <p>Mathematician enjoying higher and infinite-dimensional differential geometry and its applications.</p>
 
+<p>Currently postdoc at TU Berlin, see</p>
+
 <ul>
-<li><a href='https://www.researchgate.net/profile/Alexander_Schmeding'>Research Gate profile</a> <a href='https://www.linkedin.com/in/alexander-schmeding-248190141/'>Linkedin profile</a></li>
+<li>
+<p><a href='http://www.math.tu-berlin.de/fachgebiete_ag_stochfinanz/fg_finanz_und_versicherungsmathematik/v_menue/mitarbeiter/dr_alexander_schmeding/home/'>TU Berlin webpage</a></p>
+</li>
+
+<li>
+<p><a href='https://www.researchgate.net/profile/Alexander_Schmeding'>Research Gate profile</a></p>
+</li>
+
+<li>
+<p><a href='https://www.linkedin.com/in/alexander-schmeding-248190141/'>Linkedin profile</a></p>
+</li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4a28ddec2b2663167e405c45891455202096a312_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ea210c7096fbca85aba2fa8eb580f2bb3c685de2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/bisection+of+a+Lie+groupoid'>bisection of a Lie groupoid</a></li>
@@ -324,14 +337,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 23, 2018 at 08:07:28.
+  Last revised on May 30, 2018 at 02:15:30.
   See the <a href="https://ncatlab.org/nlab/history/Alexander Schmeding" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alexander+Schmeding" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alexander+Schmeding/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Alexander+Schmeding" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alexander+Schmeding" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Alexander+Schmeding" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alexander+Schmeding/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Alexander+Schmeding" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alexander+Schmeding" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Alexander Schmeding/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
